----------------------------------------

Now made book_session_variables script available to host pages to
handle post and get for vars that maintain state between reloads. It
does do anything extra upon var change so is currently only used in
the seneeds book.

Filtering the student_list in seneeds book by sentype, yeargroup, and
sen review date now implemented as part of the sideoptions.

Version ClaSS-0.8.3 release (2006/12/12)
----------------------------------------

Bug-fix to list_report_wrappers, the requiredor form elements need to
be arrays if named the same or a blank value can be passed.

Moved formfunctions to bookfunctions and userinterface to hostfunctions.
Moved viewstyle to bookstyle and parentstyle to hoststyle.

Basic absence lists added to the register.

Bug-fix to eliminate multiple assessments cells being printed. Now
uses the assessment element to check they only exist once.

Added requiredor class to the javascript validation for eitheror
fields. Implemented in the reportbook to start with.

Changed MarkBook table colours to match the other books.

Cosmetic changes to the marktable including addition of a shortcut
link for student_view.

Moved out the page variables from each of the book host pages to
scripts/book_variables.php.

Reorganised the infobook search to allow onsidechange for the groups.

Version ClaSS-0.8.2 release (2006/11/30)
----------------------------------------

First working version of the register completed. Now records
absent or present status; when present lateness; when absent a absence code.

Added create_register to the install process
which creates two new tables, event and attendance.

New javascript extension to the UI added for highlighting selected
table columns and student rows. Currently only implemented in the
register. Uses a css class "selected".

The css of the sideoptions has been cleaned up with a new class selery.

Moved commendate to a default value in commentDisplay and moved to